# radio-competition

./: .gitignore  bao.rar  check.cpp  local_fsk.grc  ok.grc  pluto_loopback_test.py  rx_test_.grc  sdr_link.grc  sdr_link_sim.py  sdr_link_sim_grc.py  sdr_link_sim_grc_rx_sink.py  sdr_link_sim_grc_tx_source.py  sdr_rx_pluto.grc  sdr_tx_pluto.grc  sdr_tx_pluto.py  sdr_tx_pluto_pluto_tx_sink.py  sdr_tx_pluto_tx_source.py  sg.cpp  tx_test_.grc
V8/: .gitignore  PARAMETER_REPORT.md  (+3 more)
无线电阶段9/无线电gpt/: AGENT_HANDOFF_FULL_CONVERSATION.md  ARCHITECTURE.md  DECISIONS.md  README.md  SIMULATION.md  STATUS.md  TEAM_SHARE_SDR_CONTEST_STATUS_AND_PLAYBOOK.md  pyproject.toml
无线电阶段9/无线电gpt/configs/: contest_rules.yaml
无线电阶段9/无线电gpt/demo/: demo_codec.py  demo_rx_pluto.grc  demo_rx_pluto.py  demo_rx_pluto_demo_rx_sink.py  demo_tx_pluto.py  demo_tx_pluto_demo_tx_source.py
无线电阶段9/无线电gpt/gnu_radio_contest_grc/: contest_rules.yaml  sdr_contest_complete_contest_pluto_tx_sink.py  sdr_contest_complete_contest_rx_source.py  sdr_contest_rx_pluto.grc  sdr_contest_tx_pluto.grc
无线电阶段9/无线电gpt/operation/: 01_train_ml.py  03_simulate.py  04_dsss_demo.py  06_contest.py  07_all.py  08_prepare.py  10_contest_rx.py  README.md
无线电阶段9/无线电gpt/run-sdr-contest-stack/: SKILL.md
无线电阶段9/无线电gpt/run-sdr-contest-stack/references/: pluto-api-patterns.md
无线电阶段9/无线电gpt/scripts/: demo_ml.py  probe_sdr_stack.py  run_smoke_tests.py  validate_radio_plan.py
无线电阶段9/无线电gpt/simple_demo/: README.md  simple_fsk_rx_pluto.grc  simple_fsk_rx_pluto.py  simple_fsk_tx_pluto.py  simple_fsk_tx_pluto_simple_fsk_packet_receiver.py
(+221 files in other folders)
