[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wireless-competition"
version = "0.1.0"
description = "电波对决争锋 — 无线通信竞赛备赛系统"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Competition Team"}
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pyyaml>=6.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
gpu = ["torch>=2.1"]
cpu = ["torch>=2.1"]
sdr = ["pyadi-iio>=0.0.15", "pylibiio>=0.25"]

[project.scripts]
wireless-simulate = "wireless_competition.cli.simulate:main"
wireless-transmit = "wireless_competition.cli.transmit:main"
wireless-receive = "wireless_competition.cli.receive:main"
wireless-generate-dataset = "wireless_competition.cli.generate_dataset:main"
wireless-train-classifier = "wireless_competition.cli.train_classifier:main"
wireless-evaluate = "wireless_competition.cli.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "smoke: 快速冒烟测试",
    "regression: 回归测试",
    "campaign: 大规模Monte Carlo测试",
    "hils: 硬件在环测试",
    "slow: 慢速测试",
]
